[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/TrashTruck-Sheet-export.png" type="Texture" id=1]
[ext_resource path="res://Sprites/armClaw.png" type="Texture" id=2]
[ext_resource path="res://GarbageCollector.gd" type="Script" id=3]
[ext_resource path="res://Claw.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.3026, 5.27439 )

[sub_resource type="Animation" id=2]
resource_name = "alive"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.1988, 6.67514 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.56712, 5.26534 )

[node name="GarbageCollector" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 1.5, 1.5 )
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5874, -2.08347 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 5
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/alive = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.38898, -2.18267 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -19 )

[node name="Claw" type="Sprite" parent="Position2D" groups=[
"claw",
]]
scale = Vector2( 0.75, 0.75 )
z_index = 4
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Position2D/Claw" groups=[
"claw",
]]
position = Vector2( 0, -4.36535 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/Claw/Area2D"]
position = Vector2( 0, -2.72834 )
shape = SubResource( 4 )

[node name="Position2D2" type="Position2D" parent="Position2D/Claw"]
position = Vector2( 0, -5 )

[node name="ClawTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HUD" parent="." instance=ExtResource( 5 )]
[connection signal="Got_Garbage" from="." to="HUD" method="_on_GarbageCollector_Got_Garbage"]
[connection signal="Update_Health" from="." to="HUD" method="_on_GarbageCollector_Update_Health"]
[connection signal="body_entered" from="Position2D/Claw/Area2D" to="Position2D/Claw" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ClawTimer" to="." method="_on_ClawTimer_timeout"]
